--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PokedexRawFish">
         <activity
-            android:name=".MainActivity"
+            android:name=".interfaces.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.PokedexRawFish">
             <intent-filter>
